Refactoring and more JavaDoc